add navbar html

--- a/index.html
+++ b/index.html
@@ -6,15 +6,25 @@
     <title></title>
   </head>
   <body>
+    <div class="navbar column uppercase">
+      <h3>Andersson wise</h3>
+      <ul>
+        <li class="column">studio</li>
+        <li class="column">projects</li>
+        <li class="column">press</li>
+        <li class="column">monogr</li>
+        <li class="column">contact</li>
+      </ul>
 
-    <div class="header column">
+    </div>
+    <div class="header uppercase column">
       <h3>Chihuly bridge of glass</h3>
       <h5>tacoma, wa</h5>
     </div>
     <div class="large column">
       <img src="img/md-bg.jpg">
     </div>
-    <div class="header column">
+    <div class="header uppercase column">
     <a href="#"> > featured project Chihuly bridge of glass</a>
     </div>
 
