finish mobile version

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title></title>
   </head>
   <body>
-    <div class="navbar column uppercase">
-      <h3>Andersson wise</h3>
+    <div class="navbar column uppercase white-bg">
+      <h3></h3>
       <ul>
         <li class="column">studio</li>
         <li class="column">projects</li>
@@ -17,22 +17,23 @@
       </ul>
 
     </div>
-    <div class="header uppercase column">
+    <div class="header uppercase column black-bg">
       <h3>Chihuly bridge of glass</h3>
-      <h5>tacoma, wa</h5>
+      <h6>tacoma, wa</h6>
     </div>
-    <div class="large column">
+    <div class="large column white-bg">
       <img src="img/md-bg.jpg">
     </div>
-    <div class="header uppercase column">
-    <a href="#"> > featured project Chihuly bridge of glass</a>
+    <div class="header uppercase column white-bg">
+    <a href="#">featured project Chihuly bridge of glass</a>
     </div>
 
-    <div class="small column">
-
+    <div class="press uppercase column white-bg">
+    <a href="#">featured press <br> on the boards - saint elmo public markets</a>
     </div>
-    <div class="small column">
 
+    <div class="about column white-bg">
+      <p>Andersson-Wise is an architecture & design studio based in Austin, Texas. Our collaborative approach to residential, institutional, and hospitality architecture results in precise solutions carefully attuned to their purpose.</p>
     </div>
 
   </body>
