--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title></title>
   </head>
   <body>
+
     <div class="navbar column uppercase white-bg">
       <h3></h3>
       <ul>
@@ -15,24 +16,27 @@
         <li class="column">monogr</li>
         <li class="column">contact</li>
       </ul>
-
     </div>
+
     <div class="header uppercase column black-bg">
       <h3>Chihuly bridge of glass</h3>
       <h6>tacoma, wa</h6>
     </div>
+
     <div class="large column white-bg">
       <img src="img/md-bg.jpg">
     </div>
+
     <div class="header uppercase column white-bg">
     <a href="#">featured project Chihuly bridge of glass</a>
     </div>
 
-    <div class="press uppercase column white-bg">
+    <div class="press uppercase column white-bg small">
     <a href="#">featured press <br> on the boards - saint elmo public markets</a>
     </div>
 
-    <div class="about column white-bg">
+    <div class="about column white-bg small">
+      <img src="img/logo.png">
       <p>Andersson-Wise is an architecture & design studio based in Austin, Texas. Our collaborative approach to residential, institutional, and hospitality architecture results in precise solutions carefully attuned to their purpose.</p>
     </div>
 
