add big screen queries

--- a/index.html
+++ b/index.html
@@ -18,26 +18,29 @@
       </ul>
     </div>
 
-    <div class="header uppercase column black-bg">
+    <div class="header top uppercase column black-bg">
       <h3>Chihuly bridge of glass</h3>
       <h6>tacoma, wa</h6>
     </div>
 
-    <div class="large column white-bg">
+    <div class="large column">
       <img src="img/md-bg.jpg">
     </div>
 
-    <div class="header uppercase column white-bg">
+    <div class="header bottom uppercase column">
     <a href="#">featured project Chihuly bridge of glass</a>
     </div>
 
-    <div class="press uppercase column white-bg small">
-    <a href="#">featured press <br> on the boards - saint elmo public markets</a>
+    <div class="press uppercase column">
+    <a href="#"><h6>featured press </h6>
+      <h3> on the boards - saint elmo public markets </h3></a>
     </div>
 
-    <div class="about column white-bg small">
-      <img src="img/logo.png">
-      <p>Andersson-Wise is an architecture & design studio based in Austin, Texas. Our collaborative approach to residential, institutional, and hospitality architecture results in precise solutions carefully attuned to their purpose.</p>
+    <div class="about column">
+      <a href="">
+        <img src="img/logo.png">
+        <p>Andersson-Wise is an architecture & design studio based in Austin, Texas. Our collaborative approach to residential, institutional, and hospitality architecture results in precise solutions carefully attuned to their purpose.</p>
+      </a>
     </div>
 
   </body>
