refactor code, final build

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <link rel="stylesheet" href="css/master.css" media="screen" title="no title" charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title></title>
+    <title>Andersson-Wise</title>
   </head>
   <body>
 
     <div class="navbar column uppercase white-bg">
       <h3></h3>
       <ul>
-        <li class="column">studio</li>
-        <li class="column">projects</li>
-        <li class="column">press</li>
-        <li class="column">monogr</li>
-        <li class="column">contact</li>
+        <a href="#" class="column"><li>studio</li></a>
+        <a href="#" class="column"><li>projects</li></a>
+        <a href="#" class="column"><li>press</li></a>
+        <a href="#" class="column"><li>monogr</li></a>
+        <a href="#" class="column"><li>contact</li></a>
       </ul>
     </div>
 
