--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <div class="navbar column uppercase white-bg">
       <h3></h3>
       <ul>
-        <a href="#" class="column"><li>studio</li></a>
-        <a href="#" class="column"><li>projects</li></a>
-        <a href="#" class="column"><li>press</li></a>
-        <a href="#" class="column"><li>monogr</li></a>
-        <a href="#" class="column"><li>contact</li></a>
+        <li><a href="#" class="column">studio</a></li>
+        <li><a href="#" class="column">projects</a></li>
+        <li><a href="#" class="column">press</a></li>
+        <li><a href="#" class="column">monogr</a></li>
+        <li><a href="#" class="column">contact</a></li>
       </ul>
     </div>
 
-    <div class="header top uppercase column black-bg">
+    <div class="header top uppercase column">
       <h3>Chihuly bridge of glass</h3>
       <h6>tacoma, wa</h6>
     </div>
